--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,9 +1,3 @@
 dependencies {
-    // https://mvnrepository.com/artifact/io.netty/netty-all
-    compile group: 'io.netty', name: 'netty-all', version: '4.0.23.Final'
-    // https://mvnrepository.com/artifact/com.dyuproject.protostuff/protostuff-core
-    compile group: 'com.dyuproject.protostuff', name: 'protostuff-core', version: '1.0.8'
-    // https://mvnrepository.com/artifact/com.dyuproject.protostuff/protostuff-runtime
-    compile group: 'com.dyuproject.protostuff', name: 'protostuff-runtime', version: '1.0.8'
-    compile group: 'org.objenesis', name: 'objenesis', version: '2.6'
+    compile project(':remoting')
 }
