--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.slf4j_version = '1.7.25'
-    ext.kotlin_version = '1.2.61'
+    ext.kotlin_version = '1.3.0'
     ext.testng_version = '6.9.6'
     repositories {
         mavenLocal()
@@ -55,6 +55,7 @@ subprojects {
         compile "org.slf4j:jul-to-slf4j:${slf4j_version}"
         compile "org.slf4j:jcl-over-slf4j:${slf4j_version}"
         compile "org.slf4j:log4j-over-slf4j:${slf4j_version}"
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
 
     }
     tasks.withType(JavaCompile) {
