--- a/build.gradle
+++ b/build.gradle
@@ -40,21 +40,21 @@ subprojects {
 
     dependencies {
 
-        testCompile "org.testng:testng:${testng_version}"
+        testImplementation "org.testng:testng:${testng_version}"
 
         //kotlin
-        compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
         //log4j
-        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8'
-        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8'
+        implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8'
+        implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8'
 
         //log
-        compile 'ch.qos.logback:logback-classic:1.1.7'
-        compile "org.slf4j:slf4j-api:${slf4j_version}"
-        compile "org.slf4j:jul-to-slf4j:${slf4j_version}"
-        compile "org.slf4j:jcl-over-slf4j:${slf4j_version}"
-        compile "org.slf4j:log4j-over-slf4j:${slf4j_version}"
+        implementation 'ch.qos.logback:logback-classic:1.1.7'
+        implementation "org.slf4j:slf4j-api:${slf4j_version}"
+        implementation "org.slf4j:jul-to-slf4j:${slf4j_version}"
+        implementation "org.slf4j:jcl-over-slf4j:${slf4j_version}"
+        implementation "org.slf4j:log4j-over-slf4j:${slf4j_version}"
         implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
 
     }
